--- a/merge-pdf.html
+++ b/merge-pdf.html
@@ -31,6 +31,130 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/merge-pdf" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/merge-pdf" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/merge-pdf",
+    "name": "Merge PDF Free, Secure, Offline (No Uploads)",
+    "headline": "Merge PDF Free, Secure, Offline (No Uploads)",
+    "description": "Merge multiple PDF files securely and privately in your browser. 100% free, no uploads, no watermarks, works offline.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Merge PDF Tool",
+    "url": "https://www.alltoolai.com/merge-pdf",
+    "image": "https://www.alltoolai.com/assets/icons/merge-pdf-icon.png",
+    "description": "A free, secure, and offline-ready tool to combine multiple PDF files into one. No uploads, no watermarks, unlimited use.",
+    "brand": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Merge Pdf",
+        "item": "https://www.alltoolai.com/merge-pdf"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited merges, no watermarks, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After your first visit, your browser can cache assets for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Why won’t a PDF merge?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It may be password protected or corrupted. Remove protection or re-export from the source app and try again."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you add watermarks?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. We never add watermarks. You get a clean, combined PDF."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
