--- a/mp3-to-wav-converter.html
+++ b/mp3-to-wav-converter.html
@@ -34,6 +34,127 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/mp3-to-wav-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/mp3-to-wav-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free MP3 to WAV Converter",
+    "url": "https://www.alltoolai.com/mp3-to-wav-converter",
+    "description": "Convert MP3 to WAV for free in your browser. No uploads, 100% private, fast, and unlimited. Works offline after load.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "MP3 to WAV Converter",
+    "operatingSystem": "Any (web-based)",
+    "applicationCategory": "MultimediaApplication",
+    "url": "https://www.alltoolai.com/mp3-to-wav-converter",
+    "description": "Free online MP3 to WAV converter. Convert audio locally in your browser with no uploads for maximum privacy.",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "featureList": [
+      "No uploads – 100% private conversion",
+      "Fast and unlimited",
+      "Works offline after page load",
+      "Free forever"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "MP3 to WAV Converter",
+        "item": "https://www.alltoolai.com/mp3-to-wav-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Processing is 100% local in your browser. Your audio never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is MP3 to WAV lossless?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "WAV is lossless, but converting from MP3 won’t add quality back. You get an uncompressed WAV for editing and compatibility."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will file size increase?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. WAV files are larger than MP3."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Works in modern browsers on iOS and Android."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
