--- a/pdf-decrypt.html
+++ b/pdf-decrypt.html
@@ -31,6 +31,122 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-decrypt" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-decrypt" />
 
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/pdf-decrypt",
+    "name": "PDF Decrypt & Encrypt 100% Offline",
+    "description": "Top speed, best-in-class security, and lifetime free, unlimited use. Password protect or unlock PDFs securely in your browser; no uploads, no watermarks, truly private.",
+    "isAccessibleForFree": true
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "PDF Encrypt & Decrypt (AllToolAI)",
+    "url": "https://www.alltoolai.com/pdf-decrypt",
+    "description": "Client-side PDF encrypt and decrypt tool that runs entirely in the browser. Encrypt PDFs to a .epdf container and decrypt .epdf back to .pdf. Works offline in modern browsers.",
+    "applicationCategory": "Security",
+    "operatingSystem": "Chrome, Edge, Safari, Firefox on Windows, macOS, Linux, Android, iOS",
+    "browserRequirements": "Modern browser with JavaScript enabled",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Pdf Decrypt",
+        "item": "https://www.alltoolai.com/pdf-decrypt"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers. Your files never leave your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited use, no watermarks, and no account required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is a .epdf file?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s an encrypted PDF container created by this tool. Use the same password to decrypt it and download a normal .pdf."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is there a file size limit?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No artificial limits. Very large PDFs depend on your device’s memory and browser capabilities."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you store or upload my files?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. All processing is client side. Nothing is uploaded or stored on a server."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
