--- a/pdf-pages-delete.html
+++ b/pdf-pages-delete.html
@@ -41,6 +41,177 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-pages-delete" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-pages-delete" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "PDF Pages Delete",
+    "url": "https://www.alltoolai.com/pdf-pages-delete",
+    "description": "Free, private, offline PDF page deletion tool that lets you securely delete or extract pages from a PDF file in your browser. 100% client-side, no uploads.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "PDF Pages Delete",
+    "operatingSystem": "Any (Web Browser)",
+    "applicationCategory": "UtilitiesApplication",
+    "url": "https://www.alltoolai.com/pdf-pages-delete",
+    "description": "Free, private, browser-based PDF tool for deleting or extracting pages. Works 100% offline, without uploads or sign-ups.",
+    "featureList": [
+      "Delete specific pages or ranges",
+      "Extract individual pages",
+      "Split PDFs into single-page files",
+      "Rotate pages before export",
+      "Download as combined PDF or ZIP"
+    ],
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "PDF Pages Delete",
+        "item": "https://www.alltoolai.com/pdf-pages-delete"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers. Your information stays on your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited use. No watermarks and no sign ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I delete ranges like 2–10?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. Enter numbers and ranges (e.g., 1, 3, 5–9). Invalid entries are flagged so you can correct them."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I export a single combined PDF?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Use “Download All Combined” to merge all generated pages into one PDF, or use “Download as ZIP” to get separate files."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support rotation?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Click the rotate button on any page card to rotate 90° per click before downloading."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Why won’t a PDF load?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It may be password protected or corrupted. Remove protection and try again, or re-export the PDF from its source app."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are there file size limits?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "There’s no enforced limit, but browser memory can affect very large files. For huge PDFs, process in batches or extract every page and download only what you need."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will quality be preserved?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Pages are exported as PDF pages (not screenshots). Most content remains intact; document-level features like bookmarks or attachments may not carry over in single-page exports."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Modern mobile browsers are supported. Performance depends on your device and file size."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I keep only selected pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Either delete everything else using the “Pages to Delete” field, or choose “Extract Every Page” and download only the cards you want."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
