--- a/pdf-to-jpg.html
+++ b/pdf-to-jpg.html
@@ -33,6 +33,141 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-to-jpg" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-to-jpg" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "PDF to JPG Converter (Offline, Free, Secure)",
+    "url": "https://www.alltoolai.com/pdf-to-jpg",
+    "description": "Convert PDF pages to high-quality JPG images securely in your browser. 100% offline, free, and private.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/",
+      "name": "AllToolAI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "PDF to JPG Converter",
+    "operatingSystem": "Any (Web-based)",
+    "applicationCategory": "UtilityApplication",
+    "applicationSubCategory": "File Conversion",
+    "browserRequirements": "Requires a modern web browser",
+    "description": "Fast, free, and private PDF to JPG converter that runs entirely offline in your browser. No uploads, no watermarks.",
+    "url": "https://www.alltoolai.com/pdf-to-jpg",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "featureList": [
+      "Offline and secure processing",
+      "Unlimited free conversions",
+      "High-quality JPG output",
+      "ZIP download support",
+      "Cross-platform compatibility"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "PDF to JPG",
+        "item": "https://www.alltoolai.com/pdf-to-jpg"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, no watermarks, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After the first visit, your browser can cache assets for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What image quality do you use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We render at 2× scale and export at 92% JPEG quality for crisp results."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I download all pages together?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Use 'Download All as ZIP' to save everything at once."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
