--- a/pdf-to-png.html
+++ b/pdf-to-png.html
@@ -31,6 +31,137 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-to-png" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-to-png" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "PDF to PNG Converter Free, Offline & Secure",
+    "url": "https://www.alltoolai.com/pdf-to-png",
+    "description": "Convert PDF pages to high-quality PNG images securely in your browser. Free, offline, private PDF to PNG converter with no uploads, no watermarks, and unlimited use.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "PDF to PNG Converter",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/pdf-to-png",
+    "description": "A free, offline, and secure tool to convert PDF pages into high-quality PNG images directly in your browser.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline conversion",
+      "High-quality PNG output",
+      "Unlimited and free usage",
+      "No watermarks",
+      "Works on all devices"
+    ],
+    "softwareVersion": "1.0",
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "PDF to PNG",
+        "item": "https://www.alltoolai.com/pdf-to-png"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser — no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, no watermarks, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I pick specific pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can convert and then download only the pages you need or download all as a ZIP."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After the first visit, your browser can cache assets for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you add watermarks?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. We never add watermarks. You get clean PNGs for every page."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
