--- a/phone-qr-code-generator.html
+++ b/phone-qr-code-generator.html
@@ -31,6 +31,145 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/phone-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/phone-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Phone Number to QR Code Generator (vCard & tel)",
+    "url": "https://www.alltoolai.com/phone-qr-code-generator",
+    "description": "Generate phone number QR codes for tel: and vCard instantly. Free, private, client-side tool to create branded QR codes with custom colors and logos in PNG or PDF format.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Phone Number QR Code Generator",
+    "operatingSystem": "Any (Web-based)",
+    "applicationCategory": "UtilityApplication",
+    "description": "A free, private web app to generate QR codes from phone numbers in tel: or vCard format with customizable colors and logos.",
+    "url": "https://www.alltoolai.com/phone-qr-code-generator",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "featureList": [
+      "Generate tel: QR codes to open dialer",
+      "Generate vCard QR codes with contact name",
+      "Customize foreground and background colors",
+      "Add logo overlay with adjustable size",
+      "Download high-resolution PNG or PDF"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Phone Number QR Code Generator",
+        "item": "https://www.alltoolai.com/phone-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "tel: to open the dialer, and vCard 3.0 to save a contact (when you enter a name)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will it work on iPhone and Android?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, most camera apps and QR readers support tel: and vCard."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a logo and colors?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Keep strong contrast and a modest logo size for reliable scanning."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need an account?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. It’s lifetime free, no registration, unlimited use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "My QR doesn’t scan—help?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Increase contrast, reduce logo size, enlarge the code, and test with multiple devices."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
