--- a/rearrange-pdf-pages.html
+++ b/rearrange-pdf-pages.html
@@ -31,6 +31,129 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/rearrange-pdf-pages" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/rearrange-pdf-pages" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "url": "https://www.alltoolai.com/rearrange-pdf-pages",  
+    "name": "Rearrange PDF Pages | AllToolAI",  
+    "description": "Reorder, rotate, and delete PDF pages for free — 100% offline and private. All processing is done locally in your browser with no uploads or watermarks."
+  }  
+  </script>  
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Rearrange PDF Pages",  
+    "operatingSystem": "Windows, macOS, Linux, Android, iOS",  
+    "applicationCategory": "UtilityApplication",  
+    "applicationSubCategory": "PDF Tool",  
+    "description": "Reorder, rotate, and delete PDF pages offline for free. 100% secure, runs locally in your browser with no uploads or watermarks.",  
+    "url": "https://www.alltoolai.com/rearrange-pdf-pages",  
+    "softwareVersion": "1.0",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "featureList": [  
+      "Reorder PDF pages",  
+      "Rotate PDF pages 90°",  
+      "Delete unwanted pages",  
+      "Offline and secure",  
+      "No watermarks",  
+      "Unlimited free use"  
+    ]  
+  }  
+  </script>  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Rearrange PDF Pages",
+        "item": "https://www.alltoolai.com/rearrange-pdf-pages"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Everything is processed locally in your browser — no uploads, no tracking, no servers."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Is it really free and unlimited?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Lifetime free, unlimited usage, no watermarks, and no sign-ups required."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Can I rotate or delete pages?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Absolutely. Use the on-page controls: ↻ to rotate by 90°, and ✖ to delete."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Does it work offline?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. After your first visit, your browser caches the app for offline use."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Do you add watermarks?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "No. We never add watermarks. You get a clean, organized PDF."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
