--- a/resize-pdf.html
+++ b/resize-pdf.html
@@ -29,6 +29,136 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/resize-pdf" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/resize-pdf" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Resize PDF Pages Online Fast, Private, Free (Client Side)",
+    "url": "https://www.alltoolai.com/resize-pdf",
+    "description": "Free, secure, and offline PDF resizer tool that works entirely in your browser. Resize PDFs to A4, A5, Letter, Legal, or custom sizes with no uploads or watermarks.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Resize PDF Tool",
+    "description": "A fast, private, and fully functional client-side tool to resize PDFs securely in your browser with no uploads.",
+    "brand": {
+      "@type": "Brand",
+      "name": "AllToolAI"
+    },
+    "url": "https://www.alltoolai.com/resize-pdf",
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "url": "https://www.alltoolai.com/resize-pdf"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "PDF to PNG",
+        "item": "https://www.alltoolai.com/pdf-to-png"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser with no uploads, no tracking, and no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited resizing, no watermarks, and no sign ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will content be cropped?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. The tool scales content to fit the new page size while maintaining proportions if you enable aspect ratio."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it change file size?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "File size can change slightly; vector content remains sharp, and images keep their original resolution."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I resize only certain pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can specify pages like '1, 3-5, 8' and only those pages will be resized."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After your first visit, assets can be cached by your browser for offline use."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
