--- a/rotate-pdf-pages.html
+++ b/rotate-pdf-pages.html
@@ -30,6 +30,128 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/rotate-pdf-pages" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/rotate-pdf-pages" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Rotate PDF Pages (Free, Offline) | AllToolAI",
+    "url": "https://www.alltoolai.com/rotate-pdf-pages",
+    "description": "Rotate or delete PDF pages securely in your browser. 100% client-side, free forever, and private. No uploads, no watermarks.",
+    "breadcrumb": {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://www.alltoolai.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "PDF Tools",
+          "item": "https://www.alltoolai.com/pdf-tools"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Rotate PDF Pages",
+          "item": "https://www.alltoolai.com/rotate-pdf-pages"
+        }
+      ]
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Rotate PDF Pages",
+    "operatingSystem": "Web Browser",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/rotate-pdf-pages",
+    "description": "A free, secure, and offline tool to rotate and delete PDF pages directly in your browser without uploads or watermarks.",
+    "featureList": [
+      "Rotate all or selected PDF pages",
+      "Delete unwanted pages",
+      "Offline and client-side operation",
+      "Unlimited free usage",
+      "No watermarks or signups"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser—no uploads or servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited edits, no watermarks, and no sign-ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I rotate all pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. Use 'Rotate All +90°' and click again for 180° or 270°."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After your first visit, your browser caches assets for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you add watermarks?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. We never add watermarks. You get a clean, edited PDF."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
