--- a/scientific-calculator.html
+++ b/scientific-calculator.html
@@ -31,6 +31,127 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/scientific-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/scientific-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Online Scientific Calculator | All Tool AI",
+    "url": "https://www.alltoolai.com/scientific-calculator",
+    "description": "Use our free online scientific calculator for advanced math: trigonometry, logarithms, powers, roots, factorials, and percent. Fast, private, and works locally in your browser.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Scientific Calculator",
+    "applicationCategory": "CalculatorApplication",
+    "operatingSystem": "Web",
+    "url": "https://www.alltoolai.com/scientific-calculator",
+    "description": "A powerful online scientific calculator for advanced calculations including trigonometry, logarithms, powers, roots, and more. Free, fast, and privacy-focused with no tracking or sign-ups.",
+    "featureList": [
+      "Trigonometric functions (sin, cos, tan, and inverses)",
+      "Logarithms (ln, log10)",
+      "Powers and roots",
+      "Factorials and reciprocals",
+      "Memory and percentage functions",
+      "Keyboard shortcuts",
+      "DEG/RAD mode switching",
+      "Fully local computation with privacy protection"
+    ],
+    "browserRequirements": "Requires a modern web browser such as Chrome, Edge, Firefox, or Safari",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free",
+      "availability": "https://schema.org/InStock"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Scientific Calculator",
+        "item": "https://www.alltoolai.com/scientific-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Calculations happen in your browser with no uploads or tracking. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support degrees and radians?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can switch modes easily between degrees (DEG) and radians (RAD) using the top toggle button."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It’s completely free with no paywalls, sign-ups, or watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
