--- a/skype-qr-code-generator.html
+++ b/skype-qr-code-generator.html
@@ -30,6 +30,149 @@
   <meta name="twitter:description" content="Generate Skype QR codes for add, chat, call, or video. Customize colors, add a logo, download PNG/PDF. 100% client side, private." />
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/skype-qr-generator.png" />
 
+  <!-- Hreflang (add more locales when you localize) -->
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/skype-qr-code-generator" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/skype-qr-code-generator" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Skype QR Code Generator",
+    "url": "https://www.alltoolai.com/skype-qr-code-generator",
+    "description": "Generate free Skype QR codes for adding contacts, chats, calls, and video calls. 100% private, customizable, and downloadable as PNG or PDF.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Skype QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "description": "Free online tool to generate Skype QR codes for adding contacts, starting chats, or initiating calls.",
+    "url": "https://www.alltoolai.com/skype-qr-code-generator",
+    "featureList": [
+      "Add Contact QR codes",
+      "Start Chat QR codes",
+      "Voice and Video Call QR codes",
+      "Custom colors and logos",
+      "Offline, private generation",
+      "Download PNG or PDF"
+    ],
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Skype QR Code Generator",
+        "item": "https://www.alltoolai.com/skype-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which actions are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Add Contact, Start Chat, Start Voice Call, and Start Video Call via Skype links."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I use Skype ID or email?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use your Skype name or the Microsoft account email tied to your Skype profile."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will it work on my phone?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Most devices open Skype links in the app if installed, or in the browser otherwise."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "QR doesn’t scan help?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Increase size, use high contrast, reduce logo, keep margins, and test multiple apps."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I brand the QR?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Upload a logo and tune the size for reliable scanning."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
