--- a/text-analyzer.html
+++ b/text-analyzer.html
@@ -32,6 +32,123 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/text-analyzer" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/text-analyzer" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Text Analyzer: Word Count, Readability, Keyword Density",
+    "description": "Analyze, optimize, and perfect your text with AllToolAI’s free text analyzer for word counts, readability, and keyword density — fast, private, and unlimited.",
+    "url": "https://www.alltoolai.com/text-analyzer",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/",
+      "name": "AllToolAI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "AllToolAI Text Analyzer",
+    "operatingSystem": "Any",
+    "applicationCategory": "WebApplication",
+    "description": "Free online text analyzer that calculates word and character count, readability score, and keyword density. 100% private and runs locally in your browser.",
+    "url": "https://www.alltoolai.com/text-analyzer",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text Analyzer",
+        "item": "https://www.alltoolai.com/text-analyzer"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your text never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What can I analyze?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can analyze word and character counts, sentence count, reading time, Flesch-Kincaid readability, and keyword density."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — it’s free and unlimited. No signup and no watermarks."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support multiple languages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Core counts work broadly. Readability scoring works best with English text."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
