--- a/text-to-code.html
+++ b/text-to-code.html
@@ -31,6 +31,128 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/text-to-code" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/text-to-code" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/text-to-code",
+    "name": "Text to Binary, Hex, Decimal & Octal Converter | Free Code Translator — 100% Private",
+    "description": "Convert text to binary, hexadecimal, decimal, and octal — or decode them back to text. 100% free, private, and secure. All processing happens locally in your browser.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Text to Code Converter",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "description": "Free text-to-code converter that translates plain text to binary, hex, decimal, and octal, or decodes code back to text. 100% private, secure, and processed locally.",
+    "url": "https://www.alltoolai.com/text-to-code",
+    "featureList": [
+      "Text ↔ Code conversion",
+      "Binary, Hex, Decimal, and Octal support",
+      "Local browser processing for privacy",
+      "Custom delimiters and instant results"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to Code",
+        "item": "https://www.alltoolai.com/text-to-code"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your text never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Binary, hexadecimal, decimal, and octal — with custom delimiters."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I decode code back to text?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — just toggle to Code → Text, choose the format, and paste your code."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — free and unlimited. No signup, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
