--- a/time-unit-converter.html
+++ b/time-unit-converter.html
@@ -29,6 +29,122 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/time-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/time-unit-converter" />
 
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Time Unit Converter",  
+    "url": "https://www.alltoolai.com/time-unit-converter",  
+    "description": "Free, fast, and private time unit converter for nanoseconds, seconds, minutes, hours, days, weeks, months, and years. 100% client-side and offline capable.",  
+    "isPartOf": {  
+      "@type": "WebSite",  
+      "url": "https://www.alltoolai.com/"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Time Unit Converter",  
+    "operatingSystem": "Any",  
+    "applicationCategory": "UtilitiesApplication",  
+    "description": "Fast, accurate, and private time unit converter for ns, µs, ms, s, min, h, d, wk, mo, yr, decade, and century. Works offline in your browser.",  
+    "url": "https://www.alltoolai.com/time-unit-converter",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD",  
+      "availability": "https://schema.org/InStock"  
+    },  
+    "featureList": [  
+      "Offline and secure",  
+      "Free and unlimited use",  
+      "Accurate results",  
+      "Works on desktop and mobile browsers"  
+    ]  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "BreadcrumbList",  
+    "itemListElement": [  
+      {  
+        "@type": "ListItem",  
+        "position": 1,  
+        "name": "Home",  
+        "item": "https://www.alltoolai.com/"  
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },  
+      {  
+        "@type": "ListItem",  
+        "position": 3,  
+        "name": "Time Unit Converter",  
+        "item": "https://www.alltoolai.com/time-unit-converter"  
+      }  
+    ]  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Everything runs locally in your browser with no uploads, tracking, or servers."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Is it really free and unlimited?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign-ups required."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Does it work offline?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. The converter runs fully offline once loaded, with browser caching support."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which units are supported?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "It supports nanoseconds, microseconds, milliseconds, seconds, minutes, hours, days, weeks, months, years, decades, and centuries."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
