--- a/vcard-qr-code-generator.html
+++ b/vcard-qr-code-generator.html
@@ -28,6 +28,126 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/vcard-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/vcard-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/vcard-qr-code-generator",
+    "name": "Free vCard QR Code Generator (VCF)",
+    "headline": "Free vCard QR Code Generator (VCF)",
+    "description": "Create vCard (VCF) contact QR codes instantly. Add name, phone, email, company, logo, and colors. 100% private, client-side, and free to use.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "vCard QR Code Generator",
+    "operatingSystem": "All",
+    "applicationCategory": "WebApplication",
+    "description": "Fast, free, private vCard QR Code Generator. Create scannable contact QR codes with name, email, phone, address, and logo. Runs locally in your browser.",
+    "url": "https://www.alltoolai.com/vcard-qr-code-generator",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "vCard 3.0 contact encoding",
+      "Custom logo overlay",
+      "Color customization",
+      "PNG and PDF export",
+      "100% client-side privacy"
+    ],
+    "browserRequirements": "Requires a modern web browser with JavaScript enabled"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "vCard QR Code Generator",
+        "item": "https://www.alltoolai.com/vcard-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What format is used?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The tool generates QR codes using vCard 3.0 format, compatible with most phones and contact apps."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a logo?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can overlay a custom logo at the center of the QR code for branding."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The vCard QR generator is completely free to use, client-side, and requires no sign-ups."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
