--- a/video-to-mp3-converter.html
+++ b/video-to-mp3-converter.html
@@ -31,6 +31,143 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/video-to-mp3-converter"/>
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/video-to-mp3-converter"/>
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/video-to-mp3-converter",
+    "name": "Free Video to MP3 Converter (No Upload) | Fast, Private, High Quality",
+    "description": "Convert any video to high-quality MP3 audio directly in your browser. 100% free, private, no uploads, and works on all devices.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Video to MP3 Converter",
+    "operatingSystem": "Any (Web-based)",
+    "applicationCategory": "MultimediaApplication",
+    "description": "Free, private online tool to extract MP3 audio from any video file directly in your browser. No uploads or signups required.",
+    "url": "https://www.alltoolai.com/video-to-mp3-converter",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "No file uploads — local processing",
+      "High-quality MP3 extraction",
+      "Supports MP4, MOV, MKV, WEBM, AVI",
+      "Free and unlimited use",
+      "Works on desktop and mobile browsers"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Video to MP3 Converter",
+        "item": "https://www.alltoolai.com/video-to-mp3-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your video and audio never leave your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which video formats work?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "MP4, MOV, MKV, WEBM, and AVI are supported depending on your browser’s codecs."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — lifetime free, no signup, no watermarks, and no limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What quality does it export?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "High-quality MP3 encoding that preserves detail from your source video."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Works on modern browsers for iOS and Android devices."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Any file size limits?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "There’s no artificial limit, but very large files may take longer depending on your device."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
