--- a/video-to-wav-converter.html
+++ b/video-to-wav-converter.html
@@ -30,6 +30,140 @@
   <!-- Hreflang (add more when localized pages go live) -->
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/video-to-wav-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/video-to-wav-converter" />
+
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "All Tool AI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Free Video to WAV Converter (No Upload) Extract High Quality Audio",  
+    "description": "Convert MP4, MOV, MKV, AVI, and WebM video files to high-quality WAV audio instantly in your browser. 100% private, free, and fast.",  
+    "url": "https://www.alltoolai.com/video-to-wav-converter",  
+    "inLanguage": "en"  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Video to WAV Converter",  
+    "operatingSystem": "Web",  
+    "applicationCategory": "MultimediaApplication",  
+    "description": "Extract high-quality WAV audio from any video file MP4, MOV, MKV, AVI, or WebM directly in your browser. 100% free, private, and fast.",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "url": "https://www.alltoolai.com/video-to-wav-converter",  
+    "publisher": {  
+      "@type": "Organization",  
+      "name": "All Tool AI",  
+      "url": "https://www.alltoolai.com"  
+    },  
+    "featureList": [  
+      "No file upload – local browser processing",  
+      "Supports MP4, MOV, MKV, AVI, WebM",  
+      "Outputs WAV (PCM 16-bit)",  
+      "Free and unlimited use",  
+      "Cross-platform: Chrome, Edge, Firefox, Safari"  
+    ]  
+  }  
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Video to WAV Converter",
+        "item": "https://www.alltoolai.com/video-to-wav-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Everything runs locally in your browser. Your files never leave your device."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which video formats are supported?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "MP4, MOV, MKV, AVI, and WebM. Output is WAV (PCM 16 bit)."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Is it really free forever?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. Lifetime free, no sign up, no watermarks, and no limits."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Does converting to WAV improve quality?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "WAV preserves your source quality but doesn’t add detail beyond the original."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Does it work on mobile?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. It works on modern browsers on iOS and Android."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Any file size limits?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "No artificial limits. Very large files may take longer depending on your device."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
     
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
