--- a/volume-unit-converter.html
+++ b/volume-unit-converter.html
@@ -31,6 +31,158 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/volume-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/volume-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Volume Unit Converter",
+    "url": "https://www.alltoolai.com/volume-unit-converter",
+    "description": "Free online volume converter for liters, milliliters, gallons, quarts, pints, cups, and cubic units. Fast, accurate, private, and works offline.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Volume Unit Converter",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "url": "https://www.alltoolai.com/volume-unit-converter",
+    "featureList": [
+      "Offline and private – runs entirely in your browser",
+      "Free and unlimited use",
+      "Fast and accurate conversions",
+      "Supports metric, US, and Imperial systems"
+    ],
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Volume Unit Converter",
+        "item": "https://www.alltoolai.com/volume-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser — no uploads, no tracking, no servers. 100% confidential and secure."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups. Top, fast, and best-in-class."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "L, mL, m³, US gal/qt/pt/cup (legal)/fl oz/tbsp/tsp, Imperial gal/qt/pt/cup/fl oz/tbsp/tsp, ft³, and in³."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "US vs UK gallons — what’s the difference?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "1 US gallon = 3.78541 L; 1 UK (Imperial) gallon = 4.54609 L. Make sure to select the right system."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How many mL in a tablespoon?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "US tablespoon = 14.7868 mL. Imperial tablespoon = 17.7582 mL."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How many cups in a liter?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "US legal cup: 1 L ≈ 4.1667 cups. US customary cup: 1 L ≈ 4.22675 cups. Your selection matters."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your browser can cache assets after the first visit and run offline."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use precise conversion constants with sensible rounding for readability."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
