--- a/whatsapp-qr-code-generator.html
+++ b/whatsapp-qr-code-generator.html
@@ -36,6 +36,165 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/whatsapp-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/whatsapp-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "WhatsApp QR Code Generator",
+    "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
+    "description": "Free and private WhatsApp QR Code Generator to create wa.me QR codes with prefilled messages, custom colors, and logos. 100% client-side and secure.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "WhatsApp QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
+    "description": "Generate and customize WhatsApp QR codes (wa.me links) with optional messages, colors, and logos. Fast, free, and private tool running entirely in your browser.",
+    "featureList": [
+      "Generate WhatsApp QR codes",
+      "Add prefilled messages",
+      "Customize colors and logo",
+      "Download as PNG or PDF",
+      "Runs 100% client-side for privacy"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "WhatsApp QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/whatsapp-qr-code-generator",
+    "description": "Generate and customize WhatsApp QR codes (wa.me links) with optional messages, colors, and logos. Fast, free, and private tool running entirely in your browser.",
+    "featureList": [
+      "Generate WhatsApp QR codes",
+      "Add prefilled messages",
+      "Customize colors and logo",
+      "Download as PNG or PDF",
+      "Runs 100% client-side for privacy"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "WhatsApp QR Code Generator",
+        "item": "https://www.alltoolai.com/whatsapp-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How does the QR open WhatsApp?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It encodes a wa.me link with your number and an optional message. Scanning opens a chat in WhatsApp."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need a country code?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Enter the full international number without the + or spaces (e.g., 447911123456 for the UK)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a message?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, add a prefilled message so people can send you context with one tap."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Fast, best-in-class, lifetime free and unlimited. No sign ups required."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
