--- a/wifi-qr-code-generator.html
+++ b/wifi-qr-code-generator.html
@@ -33,6 +33,136 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/wifi-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/wifi-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Wi-Fi QR Code Generator",
+    "url": "https://www.alltoolai.com/wifi-qr-code-generator",
+    "description": "Generate and customize free Wi-Fi QR codes for WPA/WPA2/WPA3, WEP, and open networks. 100% client-side, private, and fast downloads in PNG or PDF.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Wi-Fi QR Code Generator",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "All (Web-based)",
+    "url": "https://www.alltoolai.com/wifi-qr-code-generator",
+    "description": "A free, private, web-based tool to generate Wi-Fi QR codes for WPA/WPA2/WPA3, WEP, or open networks with custom colors, logos, and high-resolution exports.",
+    "featureList": [
+      "WPA/WPA2/WPA3 and WEP support",
+      "Hidden SSID option",
+      "Logo overlay and color customization",
+      "Download QR in PNG or PDF",
+      "100% browser-side data privacy"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Wi-Fi QR Code Generator",
+        "item": "https://www.alltoolai.com/wifi-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which devices support Wi-Fi QR codes?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Modern iPhone and Android devices scan and connect directly from the camera or system QR scanner."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support WPA3 and hidden SSIDs?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. WPA/WPA2/WPA3, WEP, open networks, and hidden SSIDs are supported."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I customize colors and add a logo?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. Choose colors and upload a center logo. Keep strong contrast for reliable scans."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What export formats are available?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can download high-resolution PNG or print-ready PDF files in one click."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
