--- a/zoom-qr-code-generator.html
+++ b/zoom-qr-code-generator.html
@@ -29,6 +29,130 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/zoom-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/zoom-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Zoom QR Code Generator",
+    "url": "https://www.alltoolai.com/zoom-qr-code-generator",
+    "description": "Create free Zoom meeting QR codes instantly. Customize colors, include passcodes, and download high-quality PNG or PDF QR codes. 100% client-side, secure, and free forever.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Zoom QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "WebApplication",
+    "url": "https://www.alltoolai.com/zoom-qr-code-generator",
+    "description": "Free online tool to create customizable Zoom meeting QR codes. Supports passcodes, topics, and color customization. Download as PNG or PDF. Private, secure, and runs entirely in your browser.",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Zoom QR Code Generator",
+        "item": "https://www.alltoolai.com/zoom-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which Zoom details are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Meeting ID with optional passcode. You can also encode deep links for the Zoom app."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a topic label?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, add a short title that appears above the QR code to guide participants."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Why won’t my QR scan?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use high contrast, increase size, add margins, and test in good lighting."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Unlimited generations, no sign ups. Lifetime free."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
