--- a/pdf-encrypt.html
+++ b/pdf-encrypt.html
@@ -32,9 +32,125 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-encrypt" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-encrypt" />
 
-  <!-- GEO/Hreflang (add more locales later if you localize) -->
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-encrypt" />
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-encrypt" />
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Encrypt & Decrypt PDF (Offline) Free, Secure, No Uploads",  
+    "url": "https://www.alltoolai.com/pdf-encrypt",  
+    "description": "Password protect or unlock PDFs securely in your browser. 100% client-side, no uploads, free and unlimited forever.",  
+    "breadcrumb": {  
+      "@type": "BreadcrumbList",  
+      "itemListElement": [{  
+        "@type": "ListItem",  
+        "position": 1,  
+        "name": "Home",  
+        "item": "https://www.alltoolai.com/"  
+      },
+      {  
+        "@type": "ListItem",  
+        "position": 2,  
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {  
+        "@type": "ListItem",  
+        "position": 3,  
+        "name": "PDF Encrypt",  
+        "item": "https://www.alltoolai.com/pdf-encrypt"
+      }]  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "PDF Encrypt & Decrypt",  
+    "operatingSystem": "Windows, macOS, Linux, Android, iOS",  
+    "applicationCategory": "UtilityApplication",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "description": "Free online PDF encryption and decryption tool that works 100% offline in your browser. No uploads, no watermarks, unlimited use.",  
+    "url": "https://www.alltoolai.com/pdf-encrypt",  
+    "featureList": [  
+      "Encrypt PDF with password",  
+      "Decrypt PDF files securely",  
+      "Offline, private, and free",  
+      "Supports all major browsers",  
+      "No uploads or tracking"  
+    ],  
+    "creator": {  
+      "@type": "Organization",  
+      "name": "AllToolAI",  
+      "url": "https://www.alltoolai.com"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is AllToolAI’s PDF encryption tool safe to use?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. The PDF Encrypt & Decrypt tool runs 100% locally in your browser. No files are uploaded to any server, ensuring complete privacy and security."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Do I need to upload my PDF to encrypt or decrypt it?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "No. AllToolAI’s PDF tools process your files entirely offline, directly in your browser, with no file uploads required."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Is the PDF Encrypt & Decrypt tool free to use?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. The tool is completely free to use with no limitations, watermarks, or registration required."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Which browsers or devices can I use it on?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "The tool works on all major browsers including Chrome, Firefox, Edge, and Safari, and can be used on desktop and mobile devices."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Can I decrypt password-protected PDFs?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes. You can unlock password-protected PDFs if you know the correct password. The process also happens locally in your browser."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
