--- a/pdf-extractor.html
+++ b/pdf-extractor.html
@@ -29,6 +29,137 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-extractor" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-extractor" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/pdf-extractor",
+    "name": "Advanced PDF Extractor | Free & Private",
+    "description": "Extract PDF pages securely in your browser. 100% client-side, free, unlimited use with no uploads or sign ups.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com",
+      "name": "AllToolAI"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Advanced PDF Extractor",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "description": "Free, secure, and private browser-based tool to extract or split PDF pages. Runs entirely offline, no uploads or tracking.",
+    "url": "https://www.alltoolai.com/pdf-extractor",
+    "featureList": [
+      "Offline & secure – runs in your browser",
+      "Extract or split PDF pages",
+      "Rotate pages before download",
+      "Download as combined PDF or ZIP",
+      "Free, unlimited, no watermarks"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Pdf Extractor",
+        "item": "https://www.alltoolai.com/pdf-extractor"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser with no uploads or tracking."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited extractions, no watermarks, and no sign ups."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I extract ranges like 2–10?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Enter numbers and ranges such as 1, 3, 5–9, and invalid entries are flagged for correction."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I export a single combined PDF?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can download all extracted pages as a merged PDF or export each separately in a ZIP."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you support rotation?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Rotate pages 90° per click directly in the preview before downloading."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
