--- a/pdf-split.html
+++ b/pdf-split.html
@@ -32,6 +32,121 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pdf-split" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pdf-split" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/pdf-split",
+    "name": "Split PDF Online — Free, Secure, No Uploads | Advanced PDF Splitter",
+    "description": "Split PDFs by range or every N pages — 100% client-side, no uploads, no watermarks, free and private. Works on all devices.",
+    "inLanguage": "en"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Advanced PDF Splitter",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Windows, Mac, Linux, Android, iOS",
+    "url": "https://www.alltoolai.com/pdf-split",
+    "description": "Free and secure PDF splitter tool that runs 100% locally in your browser. Split PDF files by range, interval, or page count with no uploads or watermarks.",
+    "softwareVersion": "1.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Pdf Split",
+        "item": "https://www.alltoolai.com/pdf-split"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything is processed locally in your browser with no uploads or tracking."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited splits, no watermarks, and no sign ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I split by range or interval?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can enter ranges like 1-4,6 or split every N pages (e.g., every 3 pages)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After your first visit, your browser can cache assets for offline use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you add watermarks?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. We never add watermarks. You get clean, ready-to-use PDFs."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
