--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -35,6 +35,128 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/percentage-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/percentage-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Percentage Calculator",
+    "url": "https://www.alltoolai.com/percentage-calculator",
+    "description": "Free online percentage calculator for fast, accurate percentage calculations: X% of Y, percent change, increase/decrease, reverse percentage and more.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Percentage Calculator",
+    "operatingSystem": "All",
+    "applicationCategory": "CalculatorApplication",
+    "description": "A fast, free, and private online percentage calculator that computes X% of Y, percentage change, increase/decrease, and reverse percentages directly in your browser.",
+    "url": "https://www.alltoolai.com/percentage-calculator",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "X% of Y calculation",
+      "Percentage increase/decrease",
+      "Reverse percentage finder",
+      "Value after change",
+      "Private, local processing"
+    ],
+    "publisher": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Percentage Calculator",
+        "item": "https://www.alltoolai.com/percentage-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All calculations happen in your browser. Your data never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work for taxes and tips?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. You can quickly add or remove VAT/GST/sales tax and compute tips and service charges."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I do percentage increase or decrease?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Enter your initial and final values to calculate the exact percent change."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The tool is completely free to use with no signups, paywalls, or watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
