--- a/pressure-unit-converter.html
+++ b/pressure-unit-converter.html
@@ -28,6 +28,131 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/pressure-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/pressure-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Pressure Unit Converter",
+    "url": "https://www.alltoolai.com/pressure-unit-converter",
+    "description": "Instantly convert between pressure units like psi, bar, Pa, kPa, atm, and Torr. 100% free, offline, and private pressure conversion tool.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Pressure Unit Converter",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
+    "url": "https://www.alltoolai.com/pressure-unit-converter",
+    "description": "Free, offline, and private pressure unit converter for PSI, Bar, Pascal, Torr, atm, and more. Runs entirely in your browser.",
+    "featureList": [
+      "Instant conversions between multiple pressure units",
+      "Offline functionality",
+      "No data collection or tracking",
+      "Accurate conversion constants"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Pressure Unit Converter",
+        "item": "https://www.alltoolai.com/pressure-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser—no uploads, no tracking, and no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It's lifetime free, with unlimited conversions and no sign-ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which units are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Pa, kPa, MPa, bar, mbar/hPa, psi, psf, atm, Torr, mmHg, inHg, mmH₂O, inH₂O, kgf/cm², and N/mm²."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your browser can cache assets after the first visit and run completely offline."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use precise conversion constants like 1 atm = 101325 Pa and 1 Torr ≈ 133.322 Pa, with smart rounding."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
