--- a/qr-code-scanner.html
+++ b/qr-code-scanner.html
@@ -30,6 +30,116 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/qr-code-scanner" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/qr-code-scanner" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/qr-code-scanner",
+    "name": "QR Code Scanner - Free Online QR Reader (Image Upload, Private)",
+    "description": "Free QR code scanner tool to upload and decode images directly in your browser. 100% secure, private, and works on desktop and mobile devices."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "QR Code Scanner",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "description": "Free, secure, and private QR code scanner that runs entirely in your browser. Decode URLs, Wi Fi, contacts, and Bitcoin QR codes from images.",
+    "url": "https://www.alltoolai.com/qr-code-scanner",
+    "author": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "QR Code Scanner",
+        "item": "https://www.alltoolai.com/qr-code-scanner"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I scan from my camera?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "This page supports image uploads. A live camera mode is planned."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Supported formats include URLs, text, Wi Fi (WIFI:), contacts (vCard/MeCard), email, SMS, calendar, and Bitcoin BIP21."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free and unlimited scans. No sign ups required."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
