--- a/sms-qr-code-generator.html
+++ b/sms-qr-code-generator.html
@@ -30,6 +30,144 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/sms-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/sms-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "SMS QR Code Generator",
+    "url": "https://www.alltoolai.com/sms-qr-code-generator",
+    "description": "Free, private, client-side SMS (smsto:) QR code generator to create and customize text message QR codes instantly. No uploads, no signups, 100% secure.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "SMS QR Code Generator",
+    "operatingSystem": "Any (Web-based)",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/sms-qr-code-generator",
+    "description": "Create and customize SMS QR codes that open the user's SMS app with prefilled number and message. Works on iOS and Android, 100% client-side and private.",
+    "featureList": [
+      "Custom colors and logo overlays",
+      "PNG and PDF download options",
+      "Private and offline use",
+      "Compatible with iOS and Android"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free Tool"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "SMS QR Code Generator",
+        "item": "https://www.alltoolai.com/sms-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is smsto:?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It’s the standard URI format that opens the SMS app with a prefilled number and message."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which phone formats are best?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use E.164 format (e.g., +15551234567) for consistent results on iOS and Android."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a custom message?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, the message field is optional. Keep it short and clear to fit any device limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, once the page loads. Everything is client-side, fast, and private."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "My QR doesn’t scan — help?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Increase contrast, reduce logo size, print larger, and test across devices and apps."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
