--- a/temperature-unit-converter.html
+++ b/temperature-unit-converter.html
@@ -30,6 +30,144 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/temperature-unit-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/temperature-unit-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Temperature Unit Converter (°C ⇄ °F ⇄ K)",
+    "url": "https://www.alltoolai.com/temperature-unit-converter",
+    "description": "Convert Celsius, Fahrenheit, and Kelvin instantly. 100% free, offline, and private temperature converter tool.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Temperature Unit Converter",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
+    "description": "Free, fast, and offline temperature converter for Celsius (°C), Fahrenheit (°F), and Kelvin (K). 100% client-side and privacy-friendly.",
+    "url": "https://www.alltoolai.com/temperature-unit-converter",
+    "featureList": [
+      "Offline and secure",
+      "Unlimited and free forever",
+      "Fast and simple interface",
+      "Accurate temperature conversions",
+      "Works across devices"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Unit Converter Tools",
+        "item": "https://www.alltoolai.com/unit-converter-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Temperature Unit Converter",
+        "item": "https://www.alltoolai.com/temperature-unit-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How do I convert °C to °F?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use F = (C × 9/5) + 32. Example: 25 °C = 77 °F."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I convert °F to °C?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use C = (F − 32) × 5/9. Example: 68 °F = 20 °C."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I convert °C to K?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use K = C + 273.15. Example: 0 °C = 273.15 K."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser—no uploads, no tracking, no servers."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free, unlimited conversions, and no sign ups required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We use precise constants (e.g., 273.15) and smart rounding for readability."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
