--- a/text-formatter.html
+++ b/text-formatter.html
@@ -32,6 +32,169 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/text-formatter" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/text-formatter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Text Formatter | All Tool AI",
+    "url": "https://www.alltoolai.com/text-formatter",
+    "description": "Free online text formatter that converts case, removes spaces and line breaks, trims, deduplicates, and sorts lines. Fast, private, and unlimited — processed locally in your browser.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Text Formatter",
+    "operatingSystem": "Any",
+    "applicationCategory": "WebApplication",
+    "description": "An online text formatting tool that converts case, removes extra spaces, line breaks, duplicates, and sorts lines. Fast, private, and free.",
+    "url": "https://www.alltoolai.com/text-formatter",
+    "creator": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text Analyzer",
+        "item": "https://www.alltoolai.com/text-analyzer"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is my text uploaded to your servers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. Everything is processed locally in your browser. Your text never leaves your device and remains 100% private and secure."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What can this text formatter do?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "It can convert case (UPPERCASE, lowercase, Title Case, Sentence case), remove extra spaces and line breaks, trim line whitespace, remove duplicate lines, and sort lines or numbers (A–Z, Z–A, ascending, descending)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It’s completely free, fast, and unlimited with no sign-up, no watermarks, and no usage limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work worldwide and on all devices?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. It works in modern browsers (Chrome, Edge, Firefox, Safari) on desktop and mobile across all major regions worldwide."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support multiple languages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Core operations like space cleanup, line tools, and sorting work for most languages. Case conversion works best with English and many Latin-based languages."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Will it change punctuation or numbers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Only if you choose an operation that affects them. Case conversions affect letters only; numbers and symbols are preserved."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I undo changes?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Use Undo to revert the last operation or Reset to clear everything. Copy your original text before making multiple edits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I remove duplicate lines?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Open the Duplicates menu and select Remove Duplicate Lines. For best results, trim whitespace first so lines match exactly."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I fix broken line breaks from PDFs or emails?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use Cleaner → Remove Line Breaks, then Condense Spaces. Apply Sentence case afterward to normalize capitalization."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is there a size limit?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "There’s no hard limit, but performance depends on your browser and device memory. Most texts up to a few MB work smoothly."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
