--- a/text-qr-code-generator.html
+++ b/text-qr-code-generator.html
@@ -31,6 +31,123 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/text-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/text-qr-code-generator" />
 
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebSite",  
+    "url": "https://www.alltoolai.com/",  
+    "name": "AllToolAI",  
+    "potentialAction": {  
+      "@type": "SearchAction",  
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",  
+      "query-input": "required name=search_term_string"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "WebPage",  
+    "name": "Text to QR Code Generator",  
+    "url": "https://www.alltoolai.com/text-qr-code-generator",  
+    "description": "Generate and customize QR codes from text instantly. Free, fast, and private tool to create PNG or PDF QR codes with custom colors and logos.",  
+    "isPartOf": {  
+      "@type": "WebSite",  
+      "url": "https://www.alltoolai.com/"  
+    }  
+  }  
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "SoftwareApplication",  
+    "name": "Text to QR Code Generator",  
+    "operatingSystem": "Any",  
+    "applicationCategory": "UtilitiesApplication",  
+    "description": "A client-side tool to generate and customize QR codes from text. Download as PNG or PDF with optional logo and colors.",  
+    "url": "https://www.alltoolai.com/text-qr-code-generator",  
+    "image": "https://www.alltoolai.com/assets/og-text-qr-code-generator.png",  
+    "offers": {  
+      "@type": "Offer",  
+      "price": "0",  
+      "priceCurrency": "USD"  
+    },  
+    "featureList": [  
+      "Client-side QR generation",  
+      "Custom colors and logo",  
+      "Download PNG or PDF",  
+      "High resolution export",  
+      "Private and secure (no data sent to server)"  
+    ]  
+  }  
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to QR Code Generator",
+        "item": "https://www.alltoolai.com/text-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">  
+  {  
+    "@context": "https://schema.org",  
+    "@type": "FAQPage",  
+    "mainEntity": [  
+      {  
+        "@type": "Question",  
+        "name": "Is it private and secure?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Yes, it’s 100% client-side. Your text never leaves your browser."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "What can I encode?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "Any text such as links, emails, phone numbers, Wi-Fi credentials, events, geo locations, or crypto addresses."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Do QR codes expire?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "No, static QR codes do not expire. They always decode to the original text."  
+        }  
+      },  
+      {  
+        "@type": "Question",  
+        "name": "Should I use PNG or PDF?",  
+        "acceptedAnswer": {  
+          "@type": "Answer",  
+          "text": "PNG is best for web, while PDF is ideal for print with crisp edges and margins."  
+        }  
+      }  
+    ]  
+  }  
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
