--- a/text-to-pdf.html
+++ b/text-to-pdf.html
@@ -38,6 +38,121 @@
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/text-to-pdf" />
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/text-to-pdf" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free Text to PDF Converter (No Upload)",
+    "url": "https://www.alltoolai.com/text-to-pdf",
+    "description": "Convert plain text, notes, or code into a professional PDF instantly. 100% private, fast, and free text to PDF converter with customizable page size, orientation, and font options.",
+    "headline": "Free Text to PDF Converter | Online, Fast & Private",
+    "inLanguage": "en"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Text to PDF Converter",
+    "operatingSystem": "Web",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/text-to-pdf",
+    "description": "Free online text to PDF converter that runs locally in your browser. No upload, no signup, and no watermarks.",
+    "featureList": [
+      "100% private - runs locally",
+      "Supports A4, Letter, and Legal page sizes",
+      "Portrait or landscape orientation",
+      "Adjustable font size 10–16 pt",
+      "Instant PDF generation"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "category": "Free"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Text Tools",
+        "item": "https://www.alltoolai.com/text-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text to PDF",
+        "item": "https://www.alltoolai.com/text-to-pdf"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. Your text never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What can I customize?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can customize page size (A4, Letter, Legal), orientation (portrait or landscape), and font size (10–16 pt)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free forever?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, the text to PDF converter is free and unlimited. No signup and no watermarks."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it support my language?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Plain text from most languages works well. Line breaks are preserved."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
