--- a/trigonometry-calculator.html
+++ b/trigonometry-calculator.html
@@ -31,6 +31,128 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/trigonometry-calculator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/trigonometry-calculator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Trigonometry Calculator",
+    "url": "https://www.alltoolai.com/trigonometry-calculator",
+    "description": "Free, private, and accurate trigonometry calculator for sin, cos, tan, inverse, and hyperbolic functions. Works locally in your browser without tracking.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Trigonometry Calculator",
+    "operatingSystem": "Web",
+    "applicationCategory": "EducationalApplication",
+    "description": "A free online trigonometry calculator for sin, cos, tan, inverse, and hyperbolic functions. Works locally in your browser for complete privacy.",
+    "url": "https://www.alltoolai.com/trigonometry-calculator",
+    "creator": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "featureList": [
+      "sin, cos, tan, csc, sec, cot functions",
+      "Inverse and hyperbolic calculations",
+      "Degree and radian mode switching",
+      "Instant local calculations without data storage"
+    ],
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Calculator Tools",
+        "item": "https://www.alltoolai.com/calculator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Trigonometry Calculator",
+        "item": "https://www.alltoolai.com/trigonometry-calculator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser; we don’t store your inputs."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I use degrees or radians?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Choose the mode that matches your problem or class instructions. You can switch anytime."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What about undefined results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The calculator detects asymptotes (like tan 90°) and reports them as undefined (∞)."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, free and unlimited. No account needed, no paywalls, no watermarks."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
