--- a/url-qr-code-generator.html
+++ b/url-qr-code-generator.html
@@ -32,6 +32,128 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/url-qr-code-generator" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/url-qr-code-generator" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "URL QR Code Generator",
+    "url": "https://www.alltoolai.com/url-qr-code-generator",
+    "description": "Free, fast, private URL QR code generator. Create and customize link QR codes with logo, color, and download options for PNG or PDF — 100% client-side.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "URL QR Code Generator",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilitiesApplication",
+    "description": "A free, private, browser-based tool to generate QR codes for URLs or links with customizable colors, logos, and high-resolution exports.",
+    "url": "https://www.alltoolai.com/url-qr-code-generator",
+    "creator": {
+      "@type": "Organization",
+      "name": "AllToolAI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "featureList": [
+      "Free and unlimited use",
+      "Runs locally for privacy",
+      "Custom colors and logo upload",
+      "Download in PNG or PDF"
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "0.00",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Qr Generator Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Text QR Code Generator",
+        "item": "https://www.alltoolai.com/url-qr-code-generator"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. We don’t upload or store your data."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I add a logo?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, you can place a logo in the center and adjust its size."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What formats are available?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You can export high-resolution PNG or PDF for web and print."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "My QR doesn’t scan — help?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Increase contrast, reduce the logo size, enlarge the QR, and keep a clear margin."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
