--- a/watermark-pdf.html
+++ b/watermark-pdf.html
@@ -30,6 +30,138 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/watermark-pdf" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/watermark-pdf" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "AllToolAI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Add Watermark to PDF (Text or Image) Free, Private, No Uploads",
+    "url": "https://www.alltoolai.com/watermark-pdf",
+    "description": "Add text or image watermarks to your PDFs securely in your browser. 100% client side, free, and unlimited.",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Watermark PDF Tool",
+    "operatingSystem": "Any",
+    "applicationCategory": "UtilityApplication",
+    "url": "https://www.alltoolai.com/watermark-pdf",
+    "description": "Fast, secure, and fully client-side tool to add text or image watermarks to PDFs for free.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Offline and secure",
+      "Text or image watermark",
+      "Adjust opacity, rotation, and position",
+      "Live preview",
+      "Free and unlimited usage"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Watermark PDF",
+        "item": "https://www.alltoolai.com/watermark-pdf"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser—no uploads or tracking."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it really free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Lifetime free and unlimited—no sign-ups or added watermarks."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I choose where the watermark appears?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, use the position grid to set the watermark location and rotation."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I pick specific pages?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, you can enter ranges like 'all', '1,3-5,10'."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does a watermark protect my PDF from editing?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Watermarks add a visible mark. For stronger protection, also use a password."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. After the first visit, your browser can cache assets for offline use."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
