--- a/wav-to-mp3-converter.html
+++ b/wav-to-mp3-converter.html
@@ -31,6 +31,131 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/wav-to-mp3-converter" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/wav-to-mp3-converter" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/wav-to-mp3-converter",
+    "name": "Free Online WAV to MP3 Converter",
+    "headline": "WAV to MP3 Converter – Free, Fast, Private (No Uploads)",
+    "description": "Convert uncompressed WAV files to universal MP3 in seconds. 100% private, runs locally in your browser with no uploads. Free forever and works on all platforms.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "WAV to MP3 Converter",
+    "operatingSystem": "Windows, macOS, Linux, iOS, Android, ChromeOS",
+    "applicationCategory": "MultimediaApplication",
+    "description": "Free online WAV to MP3 converter that works locally in your browser. Convert audio instantly without uploading files. Fast, private, and free forever.",
+    "url": "https://www.alltoolai.com/wav-to-mp3-converter",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Private – all processing happens locally in your browser",
+      "Free forever – no signup, no limits, no watermark",
+      "Fast conversion – WAV to MP3 in seconds",
+      "Universal compatibility – works across all major platforms"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Audio Tools",
+        "item": "https://www.alltoolai.com/audio-tools"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "WAV to MP3 Converter",
+        "item": "https://www.alltoolai.com/wav-to-mp3-converter"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Is it private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Everything runs locally in your browser. No uploads — your audio never leaves your device."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is it free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it's completely free forever with no sign-up, no watermarks, and no usage limits."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which formats are supported?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "This tool converts WAV to MP3. For other formats, try the MP3 to WAV Converter or Video to MP3 tools."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Does it work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, it works on iOS and Android as well as Windows, Mac, Linux, and ChromeOS."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I use it offline?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Conversions run locally in your browser. Once assets are cached, the tool may continue to work offline."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
